<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB4uEndQFm4CX7GOP5nTWO6u8Le6tKD3Ic</string>
    <string name="app_name">کنترل تردد نگرا</string>
    <string name="app_name_header">نرم افزار کنترل تردد نگرا</string>
    <string name="version">نسخه 1.1</string>

    <string name="PhoneNumber">شماره موبایل</string>
    <string name="Password">رمز ورود</string>
    <string name="Login">ورود</string>
    <string name="EmptyPhoneNumber">شماره موبایل را بصورت صحیح وارد نمایید</string>
    <string name="Ignore">بستن</string>
    <string name="PleaseWait">شکیبا باشید ...</string>
    <string name="LoginWarning">قبل از ورود به نرم افزار باید شماره موبایل خود را به مسئول اداری مربوطه اعلام بفرمایید.</string>
    <string name="VerifyAccount">تایید حساب کاربری</string>
    <string name="VerifyCode">"لطفا 6 عدد کد فعال سازی  \n را وارد نمایید"</string>
    <string name="ElapsedTimeGetSMS">زمان باقی مانده\n جهت دریافت پیامک</string>
    <string name="ReTryGetSMS">دریافت مجدد\n پیامک</string>
    <string name="onFailure">ارتباط با مرکز برقرار نشد</string>
    <string name="LocationState">موقعیت مکانی</string>
    <string name="InternetState">اینترنت</string>
    <string name="LastLocation">آخرین زمان دریافت موقعیت مکانی</string>
    <string name="LastInternet">آخرین زمان اتصال به اینترنت</string>
    <string name="CallWidthSupport">تماس با پشتیبانی</string>
    <string name="Inbox">پیامهای دریافتی</string>
    <string name="DisconnectGPS">موقعیت مکانی دردسترس نمیباشد</string>
    <string name="DisconnectNet">اینترنت در دسترس نمیباشد</string>
    <string name="MeasureDistance">مسافت طی \n شده امروز</string>
    <string name="ChartMeasureDistance">نمودار \n فعالیت</string>
    <string name="TestMeasureDistance">امکانات \n بعدی</string>
    <string name="MeasureDistanceToday">مسافت طی شده شما در امروز</string>
    <string name="KM">کیلومتر</string>
    <string name="Meter">متر</string>
    <string name="InTenDays">در ده روز گذشته (به کیلومتر)</string>
    <string name="Cancel">انصراف</string>
    <string name="DonChangeTime">لطفا تاریخ و زمان گوشی را تغییر ندهید</string>
    <string name="ServiceRun">برنامه در حال اجرا میباشد</string>
    <string name="WorkingRange">محدوده \n فعالیت</string>
    <string name="EnterToWorkingRange">ورود به محدوده کاری</string>
    <string name="ExitToWorkingRange">خروج از محدوده کاری</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
