<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="login"
            type="com.ngra.trafficcontroller.viewmodels.fragment.login.ViewModel_FragmentLogin" />
    </data>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.6"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="@dimen/_30sdp"
            >


            <EditText
                android:id="@+id/editPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_30sdp"
                android:background="@drawable/edit_back"
                android:inputType="phone"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/PhoneNumber"
                android:maxLength="11"
                android:layout_marginTop="@dimen/_15sdp"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone"
                >

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_30sdp"
                    android:background="@drawable/edit_back"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/Password"
                    android:maxLength="20"
                    />


                <ImageView
                    android:id="@+id/imgShowPassword"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:src="@drawable/ic_visibility"
                    android:tint="@color/colorPrimary"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:textColor="@color/ML_White"
                    android:textSize="@dimen/_12sdp"
                    fontPath="font/iransans_web_medium.ttf"
                    android:gravity="center"
                    android:text="@string/Login"
                    android:drawableLeft="@drawable/ic_lock_open"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gifWatting"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/watting"
                    android:visibility="invisible"
                    />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="@dimen/_9sdp"
                    android:textColor="@color/ML_Black"
                    fontPath="font/iransans_web_medium.ttf"
                    android:text="@string/LoginWarning"
                    />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:src="@drawable/ic_warning"
                    android:tint="@color/colorPrimary"
                    />

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>













    </LinearLayout>

</layout>
