<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="@dimen/_200sdp"
    android:background="@drawable/circle_layout_transparent">



    <LinearLayout
        android:id="@+id/LayoutMeasureDistance"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/circle_layout_primarydark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_directions_walk"
            android:tint="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/MeasureDistance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_8sdp"
            fontPath="font/iransans_web_medium.ttf"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_5sdp"
        android:background="@drawable/circle_layout_primarydark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_directions_walk"
            android:tint="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/TestMeasureDistance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_8sdp"
            android:paddingRight="@dimen/_2sdp"
            android:paddingLeft="@dimen/_2sdp"
            fontPath="font/iransans_web_medium.ttf"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/LayoutMeasureDistanceChart"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/circle_layout_primarydark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_show_chart"
            android:tint="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/ChartMeasureDistance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_8sdp"
            android:paddingRight="@dimen/_2sdp"
            android:paddingLeft="@dimen/_2sdp"
            fontPath="font/iransans_web_medium.ttf"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/LogFile"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/circle_layout_primarydark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_directions_walk"
            android:tint="@color/colorPrimaryDark"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center"
            android:lines="2"
            android:text="Show Log"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_8sdp"
            android:paddingRight="@dimen/_2sdp"
            android:paddingLeft="@dimen/_2sdp"
            fontPath="font/iransans_web_medium.ttf"
            />


    </LinearLayout>


</RelativeLayout>