<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="main"
            type="com.ngra.trafficcontroller.viewmodels.fragment.home.VM_FragmentHome" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.home.FragmentHome">

        <RelativeLayout
            android:id="@+id/LayoutPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background">


            //________________________________________________________ Footer

            <RelativeLayout
                android:id="@+id/mainFooter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentBottom="true">

                <com.ngra.trafficcontroller.views.customview.MLCurveFooter
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:backcolorf="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:maxWidth="@dimen/_140sdp"
                        android:text="@string/LastLocation"
                        android:textColor="@color/ML_White"
                        android:textSize="@dimen/_8sdp" />

                    <TextView
                        android:id="@+id/LastGPS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:gravity="center"
                        android:maxWidth="@dimen/_140sdp"
                        android:text="1398/10/03 - 12:35"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_8sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/ML_EditEmptyBorder" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center"
                        android:maxWidth="@dimen/_140sdp"
                        android:text="@string/LastInternet"
                        android:textColor="@color/ML_White"
                        android:textSize="@dimen/_8sdp" />

                    <TextView
                        android:id="@+id/LastNet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:gravity="center"
                        android:maxWidth="@dimen/_140sdp"
                        android:text="1398/10/03 - 12:35"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_8sdp" />


                </LinearLayout>


            </RelativeLayout>


            //__________________________________________________________ footer



            //__________________________________________________________ center
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/mainFooter"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/layoutCenter"
                    android:layout_width="1px"
                    android:layout_height="1px"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" />


                <LinearLayout
                    android:id="@+id/LayoutInternet"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_above="@id/layoutCenter"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:layout_toLeftOf="@id/layoutCenter"
                    android:background="@drawable/main_tail_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingRight="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_15sdp">

                    <ImageView
                        android:id="@+id/imgInternet"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp" />


                    <TextView
                        fontPath="font/iransans_web_medium.ttf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/InternetState"
                        android:textColor="@color/ML_White"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/LayoutNetSetting"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_above="@id/LayoutInternet"
                    android:layout_alignLeft="@id/LayoutInternet"
                    android:layout_alignRight="@id/LayoutInternet"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_3sdp"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/ImgWifi"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/circle_layout_transparent"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_wifi"
                        android:tint="@color/colorAccent" />


                    <ImageView
                        android:id="@+id/ImgData"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_layout_transparent"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_internet_on"
                        android:tint="@color/colorAccent" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_above="@id/layoutCenter"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:layout_toRightOf="@id/layoutCenter"
                    android:background="@drawable/main_tail_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingRight="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_15sdp">

                    <ImageView
                        android:id="@+id/imgLocation"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp" />


                    <TextView
                        fontPath="font/iransans_web_medium.ttf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/LocationState"
                        android:textColor="@color/ML_White"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_below="@id/layoutCenter"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_toLeftOf="@id/layoutCenter"
                    android:background="@drawable/main_tail_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingRight="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_15sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/ic_message"
                        android:tint="@color/ML_White" />


                    <TextView
                        fontPath="font/iransans_web_medium.ttf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/Inbox"
                        android:textColor="@color/ML_White"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_below="@id/layoutCenter"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_toRightOf="@id/layoutCenter"
                    android:background="@drawable/main_tail_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_3sdp"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingRight="@dimen/_3sdp"
                    android:paddingBottom="@dimen/_15sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/ic_call"
                        android:tint="@color/ML_White" />


                    <TextView
                        fontPath="font/iransans_web_medium.ttf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/CallWidthSupport"
                        android:textColor="@color/ML_White"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>


                <include
                    android:id="@+id/CircleMenu"
                    layout="@layout/layout_circle_menu"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />


                <LinearLayout
                    android:id="@+id/CircleMenuCenter"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circle_layout"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImgCircleMenu"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/ic_apps"
                        android:tint="@color/colorPrimaryDark" />

                </LinearLayout>



                <ListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_15sdp"
                    android:background="@color/ML_White"
                    android:visibility="gone"
                    />


            </RelativeLayout>
            //__________________________________________________________ center

        </RelativeLayout>

    </FrameLayout>

</layout>
